--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.1",
+    "throttle-debounce": "^3.0.1",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
