--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.1",
     "throttle-debounce": "^3.0.1",
+    "use-debounce": "^5.1.0",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
